---------------------------------------------------------------------------------------------------
Version: 0.3.21
Date: 2023-07-02
  Bugfixes:
    - Fixed some locale issues with settings
---------------------------------------------------------------------------------------------------
Version: 0.3.20
Date: 2023-04-05
  Bugfixes:
    - Fixed some issues with settings
---------------------------------------------------------------------------------------------------
Version: 0.3.19
Date: 2023-03-31
  Bugfixes:
    - Fixed dots appearing on map behind artillery
    - Fixed spidertron legs taking damage
  Features:
    - Added compatibility for Atomic_Overhaul
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 2023-03-26
  Bugfixes:
    - Fixed issue range of Schall's tank autocannon
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 2022-12-21
  Bugfixes:
    - Fixed issue with changing small detonation material
---------------------------------------------------------------------------------------------------
Version: 0.3.16
Date: 2022-11-06
  Bugfixes:
    - Fixed SE disabling acheivements from satelite view (badly)
---------------------------------------------------------------------------------------------------
Version: 0.3.15
Date: 2022-11-01
  Localisation:
    - Added German translations
---------------------------------------------------------------------------------------------------
Version: 0.3.14
Date: 2022-10-23
  Bugfixes:
    - Fixed some issues between SE and other mods 
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 2022-10-14
  Bugfixes:
    - Fixed some K2 techs being waaay to hard 
---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 2022-10-07
  Bugfixes: